[package]
name = "no_browser"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

description = "a light-weight, head-less 'web browser' based on reqwest"
keywords = ["web", "testing", "test", "html", "css"]
categories = ["development-tools::testing", "web-programming", "web-programming::http-client"]
repository = "https://github.com/seanmonstar/reqwest"
documentation = "https://docs.rs/no_browser"
authors = ["Lorenz Barnkow"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.16" }
reqwest = { version = "0.11", default-features = false, features = [ "cookies", "rustls-tls", "blocking" ] }
rustls = { version = "0.21" }
thiserror = { version = "1" }
lazy_static = { version = "1.4" }

[dev-dependencies]
rstest = { version = "0.17" }
tiny_http = { version = "0.12" }
urlencoding = { version = "2.1" }
